squashing bugs

--- a/static/css/chooseActivities.css
+++ b/static/css/chooseActivities.css
@@ -334,18 +334,6 @@ header ul li a {
 
 /** activity popups **/
 
-#activity1{
-
-}
-
-#activity2{
-
-}
-
-#activity3{
-
-}
-
 .hidden {
 	display: none;
 }
